--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>M2 W2 ESERCITAZIONE D2</title>
+
 </head>
 <body>
-    <script src="S2P1-scaricabile.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
